# SharedBike-Chain

./: README.md
dapp/contract/: system_contract.sol  user_contract.sol
dapp/js/: readme.txt
eth_btc/: CMakeLists.txt  README.md  run.sh
eth_btc/cmake/: FindEth.cmake
eth_btc/eth/: main.cpp
eth_btc/ethminer/: FarmClient.h  MinerAux.h
eth_btc/libbitcoin/: CMakeLists.txt  auxpow.cpp  auxpow.h  block.cpp  block.h  endian.h  pureheader.cpp  script.cpp  script.h  serialize.h  streams.h  transaction.cpp  transaction.h  uint256.h  zeroafterfree.h
eth_btc/libbitcoin/consensus/: merkle.h  params.h
eth_btc/libbitcoin/consensus/.deps/: libbitcoin_consensus_a-merkle.Po  libnamecoinconsensus_la-merkle.Plo
eth_btc/libbitcoin/crypto/.deps/: crypto_libbitcoin_crypto_a-aes.Po  crypto_libbitcoin_crypto_a-ripemd160.Po  crypto_libbitcoin_crypto_a-sha1.Po  crypto_libbitcoin_crypto_a-sha256.Po  crypto_libbitcoin_crypto_a-sha512.Po  libnamecoinconsensus_la-aes.Plo  libnamecoinconsensus_la-hmac_sha256.Plo  libnamecoinconsensus_la-hmac_sha512.Plo  libnamecoinconsensus_la-ripemd160.Plo  libnamecoinconsensus_la-sha1.Plo  libnamecoinconsensus_la-sha256.Plo  libnamecoinconsensus_la-sha512.Plo
eth_btc/libdevcore/: RLP.cpp  RLP.h
eth_btc/libethashseal/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashCPUMiner.cpp  EthashClient.cpp  EthashClient.h  EthashProofOfWork.cpp  EthashProofOfWork.h  GenesisInfo.h
eth_btc/libethashseal/genesis/: mainNetwork.cpp
eth_btc/libethcore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  SealEngine.h
eth_btc/libethereum/: Block.cpp  Block.h  BlockChain.cpp  BlockQueue.cpp  CMakeLists.txt  Client.cpp  Client.h  GenericFarm.h  GenericMiner.h
eth_btc/libevm/: CMakeLists.txt
eth_btc/libp2p/: Host.cpp  UPnP.cpp
eth_btc/libweb3jsonrpc/: CMakeLists.txt  Eth.cpp  Eth.h  EthFace.h
eth_btc/libwebthree/: CMakeLists.txt
eth_btc/tests/: eth_getAuxPow.sh
front-end/: .gitignore  app.js  example.js
front-end/libs/: contract.js
front-end/public/javascripts/: buttom.js
front-end/public/stylesheets/: detail.css  index.css  reg_log.css  register_bike.css  rent.css  style.css  user.css
front-end/routes/: index.js  user.js
front-end/views/: detail.jade  index.jade  layout.jade  register.jade  register_bike.jade  rent.jade  user.jade
miner/: Makefile  Makefile.in  aclocal.m4  config.status  configure  cpuminer-config.h
miner/autom4te.cache/: output.0  requests  traces.0  traces.1
miner/compat/: Makefile  Makefile.in
miner/compat/jansson/: Makefile  Makefile.in
miner/compat/jansson/.deps/: dump.Po  hashtable.Po  load.Po  strbuffer.Po  utf.Po  value.Po
pool/: CMakeLists.txt  INSTALL.md  LICENSE
pool/src/: BlockMaker.cc  BlockMaker.h  EthAuxMaker.cc  EthAuxMaker.h  GbtMaker.cc  JobMaker.cc  JobMaker.h  Kafka.h  Stratum.cc  Stratum.h  StratumServer.cc  StratumServer.h  StratumSession.cc
pool/src/blkmaker/: BlkMakerMain.cc  blkmaker.cfg
pool/src/ethauxmaker/: EthAuxBlockMakerMain.cc  ethauxmaker.cfg
pool/src/gbtmaker/: gbtmaker.cfg
pool/src/jobmaker/: jobmaker.cfg
pool/src/sserver/: sserver.cfg
shell/: clientVersion.sh  eth_accounts.sh  eth_blockNumber.sh  eth_getBlockTransactionCountByNumber.sh  peerCount.sh
